--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,4 @@
+@import './antd.less';
 @import './base.css';
 
 .flex {
@@ -30,12 +31,26 @@
 .pr-8 {
   padding-right: 8px;
 }
-
+.p-16 {
+  padding: 16px;
+}
+.pt-40 {
+  padding-top: 40px;
+}
 .ml-8 {
   margin-left: 8px;
 }
 .mr-8 {
   margin-right: 8px;
+}
+.ml-16 {
+  margin-left: 16px;
+}
+.mr-16 {
+  margin-right: 16px;
+}
+.mt-8 {
+  margin-top: 8px;
 }
 .text-secondary {
   color: rgba(255, 255, 255, 0.8);
