--- a/src/assets/antd.less
+++ b/src/assets/antd.less
@@ -5,3 +5,13 @@
     color: rgba(255, 255, 255, 0.7);
   }
 }
+.ant-form-item {
+  color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 12px;
+}
+.ant-btn {
+  color: rgba(255, 255, 255, 0.6);
+}
+.ant-input-affix-wrapper {
+  color: rgba(255, 255, 255, 0.7);
+}
