--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,9 @@
 .items-center {
   align-items: center;
 }
+.items-end {
+  align-items: end;
+}
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -37,11 +40,17 @@
 .pt-40 {
   padding-top: 40px;
 }
+.pb-12 {
+  padding-bottom: 12px;
+}
 .ml-8 {
   margin-left: 8px;
 }
 .mr-8 {
   margin-right: 8px;
+}
+.pb-8 {
+  padding-bottom: 8px;
 }
 .ml-16 {
   margin-left: 16px;
@@ -57,6 +66,9 @@
 }
 .text-third {
   color: #999999;
+}
+.text-black {
+  color: #000000ff;
 }
 .text-red {
   color: #ff5260;
@@ -83,4 +95,7 @@
 
 .leading-20 {
   line-height: 20px;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
