--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,9 @@
 .flex {
   display: flex;
 }
+.flex-col {
+  flex-direction: column;
+}
 .justify-center {
   justify-content: center;
 }
@@ -51,6 +54,10 @@
 }
 .mr-8 {
   margin-right: 8px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
 }
 .pb-8 {
   padding-bottom: 8px;
