--- a/src/assets/antd.less
+++ b/src/assets/antd.less
@@ -18,3 +18,9 @@
 .ant-checkbox-wrapper {
   color: rgba(255, 255, 255, 0.8);
 }
+.ant-input-number {
+  background-color: transparent;
+}
+.ant-input-number .ant-input-number-input {
+  height: 48px;
+}
