--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,9 @@
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .items-center {
   align-items: center;
 }
@@ -46,6 +49,9 @@
 .pt-40 {
   padding-top: 40px;
 }
+.pt-12 {
+  padding-top: 12px;
+}
 .pb-12 {
   padding-bottom: 12px;
 }
@@ -58,6 +64,9 @@
 
 .mb-8 {
   margin-bottom: 8px;
+}
+.mb-16 {
+  margin-bottom: 16px;
 }
 .pb-8 {
   padding-bottom: 8px;
@@ -106,6 +115,9 @@
 .leading-20 {
   line-height: 20px;
 }
+.leading-48 {
+  line-height: 48px;
+}
 .cursor-pointer {
   cursor: pointer;
 }
@@ -114,4 +126,13 @@
 }
 .m-auto {
   margin: auto;
+}
+.text-20 {
+  font-size: 20px;
+}
+.relative {
+  position: relative;
+}
+.absolute {
+  position: absolute;
 }
