--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -136,3 +136,8 @@
 .absolute {
   position: absolute;
 }
+.overflow-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
