--- a/src/assets/antd.less
+++ b/src/assets/antd.less
@@ -24,3 +24,10 @@
 .ant-input-number .ant-input-number-input {
   height: 48px;
 }
+.ant-segmented {
+  background-color: #474951;
+  .ant-segmented-item-selected {
+    background-color: #cea981;
+    color: #000;
+  }
+}
